# bevy_template

./: Cargo.toml
src/: main.rs
