[package]
name = "codotaku_bevy_template"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.27.0"
bevy_egui = "0.30.0"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[profile.dev]
opt-level = 1

[profile.dev.package.bevy]
opt-level = 3

# [profile.dev.package."*"]
# opt-level = 3

# [profile.release]
# codegen-units = 1
# lto = "thin"

# [profile.wasm-release]
# inherits = "release"
# opt-level = "s"
# strip = "debuginfo"
